Added methods for save and load productionstate and added comments.